# TruckLogistics

./: .gitignore  AI_TOOLS.md  README.md  TruckLogistic.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: planner.md
.claude/rules/: coding-style.md
.claude/skills/python-patterns/: SKILL.md
src/app/cli/: assignment.py  driver.py  main.py  truck.py
src/app/core/assignment/dto/: assignment.py
src/app/core/assignment/services/: assignment_service.py
src/app/core/domain/: assignment.py  driver.py  truck.py
src/app/core/driver/dto/: driver.py
src/app/core/driver/services/: driver_service.py
src/app/core/truck/dto/: truck.py
src/app/core/truck/services/: truck_service.py
src/app/infrastructure/db/: engine.py  session.py
src/app/infrastructure/db/migrations/: env.py
src/app/infrastructure/db/models/: assignment.py  driver.py  truck.py
src/app/infrastructure/db/repositories/: _utils.py  assignment_repository.py  (+2 more)
src/app/ui/: app.py  main.py  theme.py
src/app/ui/dialogs/: add_driver_dialog.py  add_truck_dialog.py  assignment_detail_dialog.py  create_assignment_dialog.py  driver_detail_dialog.py  edit_driver_dialog.py  edit_truck_dialog.py  truck_detail_dialog.py
src/app/ui/views/: assignment_view.py  dashboard_view.py  driver_view.py  truck_view.py
src/app/ui/widgets/: sidebar.py
src/app/ui/windows/: main_window.py
tests/core/assignment/: test_assignment_service.py
tests/core/domain/: test_assignment.py
tests/core/driver/: test_driver_service.py
tests/core/truck/: test_truck_service.py
(+2 files in other folders)
