[project]
name = "trucklogistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "psycopg>=3.3.4",
    "pyside6>=6.11.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.uv]
package = true

[project.scripts]
trucklogistics = "app.cli.main:app"
trucklogistics-ui = "app.ui.main:run_app"
